--- a/Frontend - Transportadora/transportbk/package.json
+++ b/Frontend - Transportadora/transportbk/package.json
@@ -12,29 +12,39 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "resolutions": {
+    "react-refresh": "~0.14.0"
+  },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.0",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "~50.0.3",
-    "expo-font": "~11.10.2",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.5",
-    "expo-splash-screen": "~0.26.3",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.1",
+    "@expo/vector-icons": "^13.0.0",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.21",
+    "expo": "^49.0.22",
+    "expo-constants": "~14.4.2",
+    "expo-font": "~11.4.0",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-web-browser": "~12.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.72.6",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.1",
+    "jest-expo": "~49.0.0",
+    "metro": "^0.80.5",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
