--- a/Frontend - Transportadora/transportbk/package.json
+++ b/Frontend - Transportadora/transportbk/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
+    "axios": "^1.6.7",
     "expo": "^49.0.22",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
