--- a/Frontend - Transportadora/transportbk/package.json
+++ b/Frontend - Transportadora/transportbk/package.json
@@ -21,7 +21,8 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@react-navigation/stack": "^6.3.21",
     "axios": "^1.6.7",
-    "expo": "^49.0.22",
+    "expo": "^49.0.23",
+    "expo-cli": "^6.3.10",
     "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
@@ -30,8 +31,10 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "npx": "^10.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-native": "0.72.10",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "~2.12.0",
