--- a/Frontend - Transportadora/transportbk/package.json
+++ b/Frontend - Transportadora/transportbk/package.json
@@ -31,11 +31,13 @@
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
     "expo-web-browser": "~12.3.2",
+    "install": "^0.13.0",
     "npx": "^10.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.0",
     "react-native": "0.72.10",
+    "react-native-cli": "^2.0.1",
     "react-native-element-dropdown": "^2.10.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
@@ -47,9 +49,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
-    "metro": "^0.80.5",
+    "metro": "^0.80.7",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
