--- a/Frontend - Transportadora/transportbk/package.json
+++ b/Frontend - Transportadora/transportbk/package.json
@@ -1,59 +1,29 @@
 {
   "name": "transportbk",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
-  },
-  "resolutions": {
-    "react-refresh": "~0.14.0"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.1.10",
-    "@react-navigation/native-stack": "^6.9.18",
-    "@react-navigation/stack": "^6.3.21",
-    "axios": "^1.6.7",
-    "expo": "^49.0.23",
-    "expo-cli": "^6.3.10",
-    "expo-constants": "~14.4.2",
-    "expo-font": "~11.4.0",
-    "expo-linking": "~5.0.2",
-    "expo-router": "^2.0.0",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-web-browser": "~12.3.2",
-    "install": "^0.13.0",
-    "npx": "^10.2.2",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@react-navigation/stack": "^6.3.29",
+    "expo": "~50.0.14",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.51.0",
-    "react-native": "0.72.10",
-    "react-native-cli": "^2.0.1",
-    "react-native-element-dropdown": "^2.10.1",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-vector-icons": "^10.0.3",
-    "react-native-web": "~0.19.6"
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "@types/react-native": "^0.73.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
-    "metro": "^0.80.7",
-    "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
   "private": true
