--- a/Frontend - TechBK/techbk/package.json
+++ b/Frontend - TechBK/techbk/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
@@ -16,7 +17,8 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "~50.0.14",
+    "expo": "^50.0.17",
+    "expo-image-picker": "^14.7.1",
     "expo-notifications": "~0.27.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
@@ -24,10 +26,11 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-modalize": "^2.1.1",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "^3.8.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1"
+    "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
