--- a/Frontend - TechBK/techbk/package.json
+++ b/Frontend - TechBK/techbk/package.json
@@ -17,20 +17,21 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "axios": "^1.6.8",
-    "expo": "^50.0.17",
-    "expo-image-picker": "^14.7.1",
-    "expo-notifications": "~0.27.7",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.5",
+    "expo-image-picker": "~15.0.5",
+    "expo-notifications": "~0.28.2",
+    "expo-status-bar": "~1.12.1",
+    "ngrok": "^4.3.3",
     "react": "18.2.0",
     "react-hook-form": "^7.51.3",
-    "react-native": "0.73.6",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-modalize": "^2.1.1",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "^3.6.2",
-    "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
